-------------------------- soilDB 1.7 (2016-02-16) ----------------------------
* bug fix in SDA_query(), due to changes in httr::content. Thanks Kyle Bocinsky for the fix!
* SDA_query() now returns SQL errors generated by SDA

-------------------------- soilDB 1.6.9 (2015-12-28) ----------------------------
* clean-up in local NASIS queries, removed extra parens
* NASIS component query function overhaul: previous code may be broken, details pending

-------------------------- soilDB 1.6.8 (2015-12-22) ----------------------------
* added temperature class (temp_class) field from the pedon taxonomic history table (NASIS) [addition suggested by J. Baker]

-------------------------- soilDB 1.6.7 (2015-12-16) ----------------------------
* experimental function for processing SDA queries that return geometry: processSDA_WKT()

-------------------------- soilDB 1.6.5 (2015-12-03) ----------------------------
* bug fix for poorly specified gemomorphic descriptions, caused fetchNASIS() to barf
* fetchKSSL() gains new query filters, see man page

-------------------------- soilDB 1.6.4 (2015-11-27) ----------------------------
* package re-org, getting ready for soilDB 2.0:
 + dropping use of `RCurl` functions in favor of `httr` alternatives (done)
 + switch from `reshape` to `reshape2` (pending)
 + possibly move some packages from SUGGESTS to IMPORTS

-------------------------- soilDB 1.6.3 (2015-11-20) ----------------------------
* new spatial query helper functions for SDA
* re-named SSURGO_spatial_query() to SoilWeb_spatial_query(), this function may be phased-out due to spatial support now available in SDA
* removed MUKEYS_by_ll_bbox() function, no longer needed and web-service may be disabled at any time
* mapunit_geom_by_ll_bbox() will probably be removed in the near future with an SDA-based alternative
* KSSL data updated (server-side) to June 2015 snapshot, "site_id" column removed from fetchKSSL() results
